--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,15 @@
   src: url('../public/pixel-font.ttf') format('truetype');
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 body {
   margin: 0;
   font-family: 'Press Start 2P', sans-serif;
